--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             footer { padding: 15px 0; }
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5671870713337337"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
