--- a/404.html
+++ b/404.html
@@ -182,158 +182,214 @@
     </div>
 
     <script>
-        let currentRequestId = 0;
+    let currentRequestId = 0;
 
-        document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-        function parseDomainTime(str, type) {
-            if (!str || str === "null" || str === "") return "-";
-            let formatted = str.toString()
-                .replace(/(\d+)Y/g, '<b>$1</b>年')
-                .replace(/(\d+)Mo/g, '<b>$1</b>月')
-                .replace(/(\d+)D/g, '<b>$1</b>天')
-                .trim();
-            const hasY = str.includes('Y');
-            const hasMo = str.includes('Mo');
-            const dMatch = str.match(/(\d+)D/);
-            const days = dMatch ? parseInt(dMatch[1]) : 0;
-            if (type === 'age') {
-                if (!hasY && !hasMo && days < 7) {
-                    return formatted + ' <span class="status-badge badge-recent">最近注册</span>';
-                }
+    function parseDomainTime(str, type) {
+        if (!str || str === "null" || str === "") return "-";
+
+        let formatted = str.toString()
+            .replace(/(\d+)Y/g, '<b>$1</b>年')
+            .replace(/(\d+)Mo/g, '<b>$1</b>月')
+            .replace(/(\d+)D/g, '<b>$1</b>天')
+            .trim();
+
+        const hasY = str.includes('Y');
+        const hasMo = str.includes('Mo');
+        const dMatch = str.match(/(\d+)D/);
+        const days = dMatch ? parseInt(dMatch[1]) : 0;
+
+        if (type === 'age') {
+            if (!hasY && !hasMo && days < 7) {
+                return formatted + ' <span class="status-badge badge-recent">最近注册</span>';
             }
-            if (type === 'remaining') {
-                const isExpired = str.includes('-') || (str.trim() === '0D');
-                if (isExpired) {
-                    let cleanValue = formatted.replace(/-/g, '');
-                    return `<span style="color:var(--color-warning); font-weight:700;">已过期 ${cleanValue}</span>`;
-                }
-                if (!hasY && !hasMo && days < 7) {
-                    return formatted + ' <span class="status-badge badge-warning">即将到期</span>';
-                }
-            }
-            return formatted;
         }
 
-        function setDisplay(id, val, isFlex = false) {
-            const el = document.getElementById(id);
-            const isEmpty = !val || val === '-' || val === 'null' || (Array.isArray(val) && val.length === 0);
-            el.style.display = isEmpty ? 'none' : (isFlex ? 'flex' : 'block');
-            return !isEmpty;
+        if (type === 'remaining') {
+            const isExpired = str.includes('-') || (str.trim() === '0D');
+            if (isExpired) {
+                let cleanValue = formatted.replace(/-/g, '');
+                return `<span style="color:var(--color-warning); font-weight:700;">已过期 ${cleanValue}</span>`;
+            }
+            if (!hasY && !hasMo && days < 7) {
+                return formatted + ' <span class="status-badge badge-warning">即将到期</span>';
+            }
         }
 
-        async function query() {
-            const domain = document.getElementById('domainInput').value.trim().toLowerCase();
-            const alertEl = document.getElementById('alertMsg');
-            const unregEl = document.getElementById('unregisteredView');
-            const resultEl = document.getElementById('resultView');
-            const btn = document.getElementById('queryBtn');
+        return formatted;
+    }
 
-            // 1. 增加请求 ID
-            const requestId = ++currentRequestId;
+    function setDisplay(id, val, isFlex = false) {
+        const el = document.getElementById(id);
+        const isEmpty =
+            !val ||
+            val === '-' ||
+            val === 'null' ||
+            (Array.isArray(val) && val.length === 0);
 
-            // 2. 清理界面状态
-            alertEl.style.display = 'none';
-            unregEl.style.display = 'none';
-            resultEl.style.display = 'none';
+        el.style.display = isEmpty ? 'none' : (isFlex ? 'flex' : 'block');
+        return !isEmpty;
+    }
 
-            if(!domain || !domain.includes('.')) {
-                alertEl.innerText = '请输入有效的域名';
-                alertEl.style.display = 'block';
-                return;
-            }
+    function resetSourceBoxes() {
+        // RDAP
+        document.getElementById('rdap-box').style.display = 'none';
+        document.getElementById('res-rdap').innerText = '';
 
-            document.title = `${domain}域名查询 - 王先生查询`;
+        // WHOIS
+        document.getElementById('whois-box').style.display = 'none';
+        document.getElementById('res-whois').innerText = '';
+    }
 
-            const currentPath = window.location.pathname.replace(/^\//, '');
-            if (domain !== currentPath) {
-                window.history.pushState(null, '', '/' + domain);
-            }
+    async function query() {
+        const domain = document.getElementById('domainInput').value.trim().toLowerCase();
+        const alertEl = document.getElementById('alertMsg');
+        const unregEl = document.getElementById('unregisteredView');
+        const resultEl = document.getElementById('resultView');
+        const btn = document.getElementById('queryBtn');
 
-            // 3. UI 反馈但不锁定按钮
-            btn.innerHTML = '<i class="fas fa-circle-notch fa-spin"></i> 查询中';
+        const requestId = ++currentRequestId;
 
-            try {
-                const response = await fetch(`https://api.mrwang.com/whois.php?domain=${domain}`);
-                const res = await response.json();
-                
-                // 4. 竞态处理：如果不是最新的请求，直接丢弃结果
-                if (requestId !== currentRequestId) {
+        // ===== 清理界面 =====
+        alertEl.style.display = 'none';
+        unregEl.style.display = 'none';
+        resultEl.style.display = 'none';
+        resetSourceBoxes();
+
+        if (!domain || !domain.includes('.')) {
+            alertEl.innerText = '请输入有效的域名';
+            alertEl.style.display = 'block';
+            return;
+        }
+
+        document.title = `${domain}域名查询 - 王先生查询`;
+
+        const currentPath = window.location.pathname.replace(/^\//, '');
+        if (domain !== currentPath) {
+            window.history.pushState(null, '', '/' + domain);
+        }
+
+        btn.innerHTML = '<i class="fas fa-circle-notch fa-spin"></i> 查询中';
+
+        try {
+            const response = await fetch(`https://api.mrwang.com/whois.php?domain=${domain}`);
+            const res = await response.json();
+
+            if (requestId !== currentRequestId) return;
+
+            if (res.code === 0 && res.data) {
+                const d = res.data;
+
+                if (d.registered === false) {
+                    document.getElementById('unreg-domain-name').innerText = domain;
+                    unregEl.style.display = 'block';
                     return;
                 }
-                
-                if(res.code === 0 && res.data) {
-                    const d = res.data;
-                    if (d.registered === false) {
-                        document.getElementById('unreg-domain-name').innerText = domain;
-                        unregEl.style.display = 'block';
-                    } else {
-                        resultEl.style.display = 'block';
-                        document.getElementById('res-age').innerHTML = parseDomainTime(d.age, 'age');
-                        document.getElementById('res-remaining').innerHTML = parseDomainTime(d.remaining, 'remaining');
 
-                        const timeList = document.getElementById('list-times');
-                        timeList.innerHTML = '';
-                        const timeFields = [
-                            { label: '注册日期', val: d.creationDateISO8601 || d.creationDate },
-                            { label: '到期日期', val: d.expirationDateISO8601 || d.expirationDate },
-                            { label: '更新日期', val: d.updatedDateISO8601 || d.updatedDate }
-                        ];
-                        let hasValidTime = false;
-                        timeFields.forEach(f => {
-                            if(f.val && f.val !== "null" && f.val !== "") {
-                                hasValidTime = true;
-                                const cleanTime = f.val.replace('T',' ').replace('Z','').substring(0, 19);
-                                timeList.innerHTML += `<div class="list-item"><span class="item-sub-label">${f.label}</span><span>${cleanTime}</span></div>`;
-                            }
-                        });
-                        setDisplay('row-times', hasValidTime, true);
-                        setDisplay('row-registrar', d.registrar, true);
-                        document.getElementById('val-registrar').innerText = d.registrar;
-                        const hasNs = d.nameServers && d.nameServers.length > 0;
-                        document.getElementById('list-ns').innerHTML = hasNs ? d.nameServers.map(ns => `<div class="list-item">${ns}</div>`).join('') : '';
-                        setDisplay('row-ns', hasNs, true);
-                        const hasStatus = d.status && d.status.length > 0;
-                        document.getElementById('list-status').innerHTML = hasStatus ? d.status.map(s => `<div class="list-item">${s.text}</div>`).join('') : '';
-                        setDisplay('row-status', hasStatus, true);
+                resultEl.style.display = 'block';
 
-                        if(d.rdapData && d.rdapData !== "" && d.rdapData !== "null") {
-                            const rawRdap = typeof d.rdapData === 'string' ? JSON.parse(d.rdapData) : d.rdapData;
-                            document.getElementById('res-rdap').innerText = JSON.stringify(rawRdap, null, 2);
-                            document.getElementById('rdap-box').style.display = 'block';
-                        }
-                        if(setDisplay('whois-box', d.whoisData)) document.getElementById('res-whois').innerText = d.whoisData;
+                document.getElementById('res-age').innerHTML =
+                    parseDomainTime(d.age, 'age');
+                document.getElementById('res-remaining').innerHTML =
+                    parseDomainTime(d.remaining, 'remaining');
+
+                // 时间节点
+                const timeList = document.getElementById('list-times');
+                timeList.innerHTML = '';
+
+                const timeFields = [
+                    { label: '注册日期', val: d.creationDateISO8601 || d.creationDate },
+                    { label: '到期日期', val: d.expirationDateISO8601 || d.expirationDate },
+                    { label: '更新日期', val: d.updatedDateISO8601 || d.updatedDate }
+                ];
+
+                let hasValidTime = false;
+                timeFields.forEach(f => {
+                    if (f.val && f.val !== "null" && f.val !== "") {
+                        hasValidTime = true;
+                        const cleanTime = f.val
+                            .replace('T', ' ')
+                            .replace('Z', '')
+                            .substring(0, 19);
+
+                        timeList.innerHTML += `
+                            <div class="list-item">
+                                <span class="item-sub-label">${f.label}</span>
+                                <span>${cleanTime}</span>
+                            </div>`;
                     }
-                } else {
-                    alertEl.innerText = res.msg || '查询失败';
-                    alertEl.style.display = 'block';
+                });
+                setDisplay('row-times', hasValidTime, true);
+
+                // 注册商
+                document.getElementById('val-registrar').innerText = d.registrar || '';
+                setDisplay('row-registrar', d.registrar, true);
+
+                // NS
+                const hasNs = d.nameServers && d.nameServers.length > 0;
+                document.getElementById('list-ns').innerHTML = hasNs
+                    ? d.nameServers.map(ns => `<div class="list-item">${ns}</div>`).join('')
+                    : '';
+                setDisplay('row-ns', hasNs, true);
+
+                // 状态
+                const hasStatus = d.status && d.status.length > 0;
+                document.getElementById('list-status').innerHTML = hasStatus
+                    ? d.status.map(s => `<div class="list-item">${s.text}</div>`).join('')
+                    : '';
+                setDisplay('row-status', hasStatus, true);
+
+                // ===== RDAP =====
+                if (d.rdapData && d.rdapData !== "" && d.rdapData !== "null") {
+                    const rawRdap =
+                        typeof d.rdapData === 'string'
+                            ? JSON.parse(d.rdapData)
+                            : d.rdapData;
+
+                    document.getElementById('res-rdap').innerText =
+                        JSON.stringify(rawRdap, null, 2);
+                    document.getElementById('rdap-box').style.display = 'block';
                 }
-            } catch (err) { 
-                if (requestId === currentRequestId) {
-                    alertEl.innerText = '获取数据失败，请重试';
-                    alertEl.style.display = 'block';
+
+                // ===== WHOIS =====
+                if (setDisplay('whois-box', d.whoisData)) {
+                    document.getElementById('res-whois').innerText = d.whoisData;
                 }
-            } finally { 
-                // 只有最新的请求负责重置按钮文字
-                if (requestId === currentRequestId) {
-                    btn.innerHTML = '<i class="fas fa-bolt"></i> 查询'; 
-                }
+
+            } else {
+                alertEl.innerText = res.msg || '查询失败';
+                alertEl.style.display = 'block';
+            }
+
+        } catch (err) {
+            if (requestId === currentRequestId) {
+                alertEl.innerText = '获取数据失败，请重试';
+                alertEl.style.display = 'block';
+            }
+        } finally {
+            if (requestId === currentRequestId) {
+                btn.innerHTML = '<i class="fas fa-bolt"></i> 查询';
             }
         }
+    }
 
-        function checkAutoQuery() {
-            let pathDomain = window.location.pathname.split('/').filter(Boolean).pop();
-            if (!pathDomain) pathDomain = new URLSearchParams(window.location.search).get('domain');
-            if (pathDomain && pathDomain.includes('.')) {
-                document.getElementById('domainInput').value = pathDomain;
-                query(); 
-            }
+    function checkAutoQuery() {
+        let pathDomain = window.location.pathname.split('/').filter(Boolean).pop();
+        if (!pathDomain) {
+            pathDomain = new URLSearchParams(window.location.search).get('domain');
         }
+        if (pathDomain && pathDomain.includes('.')) {
+            document.getElementById('domainInput').value = pathDomain;
+            query();
+        }
+    }
 
-        document.getElementById('domainInput').addEventListener('keydown', (e) => { 
-            if(e.key === 'Enter') query(); 
-        });
-        window.addEventListener('DOMContentLoaded', checkAutoQuery);
-    </script>
+    document.getElementById('domainInput').addEventListener('keydown', e => {
+        if (e.key === 'Enter') query();
+    });
+
+    window.addEventListener('DOMContentLoaded', checkAutoQuery);
+</script>
 </body>
 </html>
