--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
             footer { padding: 15px 0; }
         }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5671870713337337"
-     crossorigin="anonymous"></script>
+    <meta http-equiv="refresh" content="0;url=https://wxscx.com">
 </head>
 <body>
 
